--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -30,7 +31,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "both": "concurrently \" npm start \" \" npm run ../backend/index.js\""
+    "both": "concurrently \" npm start \" \" nodemon ../backend/index.js\""
   },
   "eslintConfig": {
     "extends": [
